k8s/errors/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: errors
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: errors
          image: nginx:1.19.8
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: errors
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
            - name: errors
              mountPath: /usr/share/nginx/html/401.html
              subPath: 401.html
      volumes:
        - name: errors
          configMap:
            name: errors
